--- a/style.css
+++ b/style.css
@@ -7,10 +7,6 @@
 }
 body {
     background-color: hsl(47, 88%, 63%);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
     font-family: 'Figree', sans-serif;
 }
 .container {
@@ -18,10 +14,10 @@ body {
     border: 1px solid black;
     box-shadow: 5px 5px black;
     border-radius: 20px;
-    max-width: 384px;
-    padding: 24px;
-    width: 100%;
-    
+    display: block;
+    max-width: 300px;
+    margin: 100px auto;
+    padding: 20px;
 }
 #illustration {
     border-radius: 10px;
@@ -33,30 +29,33 @@ button {
     border-radius: 4px;
     padding: 5px 10px;
     margin-top: 20px;
-    margin-bottom: 10px;
-    font-weight: 600;
-    font-size: 12px;
+    margin-bottom: 5px;
+    font-weight: 700;
+    font-size: 10px;
     color: black;
 }
-p {
-    margin: 0;
-    margin-bottom: 10px;
-    font-size: 15px;
-    font-weight: 600;
-    line-height: 20px;
+.content {
+    font-size: 13px;
     color: hsl(0, 0%, 42%);
-
+    margin-bottom: 10px;
+    line-height: 20px;
 }
 h4 {
     margin: 0;
-    font-size: 22px;
+    font-size: 16px;
     font-weight: 800;
-    margin-bottom: 20px;  
+    margin-bottom: 10px;  
+    cursor: pointer;
 }
-#publish {
+h4:hover {
+    color: hsl(47, 88%, 63%);
+    transition: 0.3s;
+}
+.publish {
     font-size: 10px;
     font-weight: 600;
     color: black;
+    margin: 10px 0;
 }
 .blogger {
     display: flex;
@@ -64,22 +63,10 @@ h4 {
     gap: 10px;
 }
 .blogger img {
-    width: 32px;
-    height: 32px;
+    width: 10%;
 }
 .blogger-name {
-    font-size: 16px;
+    font-size: 10px;
     font-weight: 800;
     color: black;
-}
-
-@media (max-width: 400px){
-    body {
-        padding: 20px;
-    }
-    h4 {
-    font-size: 17px;
-    font-weight: 800;
-    margin-bottom: 20px;  
-    }
 }
